--- a/index.html
+++ b/index.html
@@ -2,15 +2,23 @@
     <html>
     <head>
         <meta charset="UTF-8" />
+
+        <!-- Make the page mobile compatible -->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Allow installing the app to the homescreen -->
+        <meta name="mobile-web-app-capable" content="yes">
         <title>Hello React!</title>
     </head>
     <body>
     <div id="example"></div>
-    <!-- Dependencies -->
-    <script src="./node_modules/react/umd/react.development.js"></script>
-    <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
 
-    <!-- Main -->
-    <script src="bundle.js"></script>
+    <!-- A lot of magic happens in this file.
+    HtmlWebpackPlugin automatically injects all assets (e.g. bundle.js, main.css) with the correct HTML tags,
+    which is why they are missing in this file.-->
+
+
     </body>
     </html>
