--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
         <!-- Allow installing the app to the homescreen -->
         <meta name="mobile-web-app-capable" content="yes">
-        <title>Hello React!</title>
+        <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
     <body>
-    <div id="example"></div>
+    <div id="app"></div>
 
     <!-- A lot of magic happens in this file.
     HtmlWebpackPlugin automatically injects all assets (e.g. bundle.js, main.css) with the correct HTML tags,
