--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
         <!-- Make the page mobile compatible -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
         <!-- Allow installing the app to the homescreen -->
         <meta name="mobile-web-app-capable" content="yes">
         <title><%= htmlWebpackPlugin.options.title %></title>
@@ -17,7 +15,8 @@
 
     <!-- A lot of magic happens in this file.
     HtmlWebpackPlugin automatically injects all assets (e.g. bundle.js, main.css) with the correct HTML tags,
-    which is why they are missing in this file.-->
+    which is why they are missing in this file.
+    Don't add any assets here! (Check out webpack.dev.babel.js and webpack.prod.babel.js if you want to know more) -->
 
 
     </body>
